--- a/Forest.ipynb
+++ b/Forest.ipynb
@@ -1441,7 +1441,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More Robust Grid search, remove values as they  get train"
+    "## More Robust Grid search, remove values as they  get trained and remain constant"
    ]
   },
   {
@@ -1546,29 +1546,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "POPESTIMATE2019, Score: 0.62053\n",
-      "POP_DEN, Score: 0.01495\n",
-      "NEVER, Score: 0.00471\n",
-      "RARELY, Score: 0.00537\n",
-      "SOMETIMES, Score: 0.00529\n",
-      "FREQUENTLY, Score: 0.00539\n",
-      "ALWAYS, Score: 0.01041\n",
-      "% < HS, Score: 0.03181\n",
-      "% HS, Score: 0.01187\n",
-      "% Some College, Score: 0.00888\n",
-      "% Bachelors, Score: 0.00763\n",
-      "POPxALWAYS, Score: 0.00851\n",
-      "POPxFREQUENTLY, Score: 0.08580\n",
-      "POPxSOMETIMES, Score: 0.15910\n",
-      "POPxRARELY, Score: 0.00856\n",
-      "POPxNEVER, Score: 0.01118\n"
+      "Importance:\n",
+      "POPESTIMATE2019: 0.62053\n",
+      "POP_DEN: 0.01495\n",
+      "NEVER: 0.00471\n",
+      "RARELY: 0.00537\n",
+      "SOMETIMES: 0.00529\n",
+      "FREQUENTLY: 0.00539\n",
+      "ALWAYS: 0.01041\n",
+      "% < HS: 0.03181\n",
+      "% HS: 0.01187\n",
+      "% Some College: 0.00888\n",
+      "% Bachelors: 0.00763\n",
+      "POPxALWAYS: 0.00851\n",
+      "POPxFREQUENTLY: 0.08580\n",
+      "POPxSOMETIMES: 0.15910\n",
+      "POPxRARELY: 0.00856\n",
+      "POPxNEVER: 0.01118\n"
      ]
     },
     {
@@ -1586,8 +1587,9 @@
    ],
    "source": [
     "importance = rf.feature_importances_\n",
+    "print('Importance:')\n",
     "for i,v in enumerate(importance):\n",
-    "    print('%s, Score: %.5f' % (l[i],v))\n",
+    "    print('%s: %.5f' % (l[i],v))\n",
     "# plot feature importance\n",
     "plt.bar([x for x in range(len(importance))], importance)\n",
     "plt.show()"
